--- a/1_5.html
+++ b/1_5.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <title>My calculator</title>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="1_5.js"></script>
 </head>
 <body>
 This is my calculator.
 
-<div class="calculator" id="calc1_out"></div>
+<div class="calculator" id="calc1"></div>
 
 </body>
 </html>
