--- a/bootstrap1_1.html
+++ b/bootstrap1_1.html
@@ -8,6 +8,31 @@
 <body>
 	<!-- Main Container -->
 	<div class="container">
+		<!-- carousel -->
+		<div id="homepage-slider" class="carousel slide">
+			<div class="carousel-inner">
+				<div class="item active">
+					<img src="http://placehold.it/1200x480">
+					<div class="carousel-caption">
+						<p>Caption for first image here</p>
+					</div>
+				</div>
+				<div class="item">
+					<img src="http://placehold.it/1200x480">
+					<div class="carousel-caption">
+						<p>Caption for second image here</p>
+					</div>
+				</div>
+				<div class="item">
+					<img src="http://placehold.it/1200x480">
+					<div class="carousel-caption">
+						<p>Caption for third image here</p>
+					</div>
+				</div>
+			</div>
+			<a class="carousel-control left" href="#homepage-slider" data-slide="prev">&lsaquo;</a>
+			<a class="carousel-control right" href="#homepage-slider" data-slide="next">&rsaquo;</a>
+		</div>
 		<!-- Menu Bar -->
 		<div class="navbar">
 			<div class="navbar-inner">
@@ -21,7 +46,7 @@
 				<form class="navbar-form pull-right">
 				<input type="text" class="span2">
 				<button type="submit" class="btn">Submit</button>
-			</form>
+				</form>
 
 			</div>
 		</div>
